--- a/ed-a003-2020/.project
+++ b/ed-a003-2020/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ed-a003-2020</name>
+	<name>71479570_edi-a003_2020</name>
 	<comment></comment>
 	<projects>
 	</projects>
